# SnakeClone

./: CMakeLists.txt  GameGlobalObjects.h  README.md  main.cpp
Fruit/: Fruit.cpp  Fruit.h
Snake/: Direction.h  Snake.cpp  Snake.h
